# unlogical

./: .gitignore  configure.ac
src/: Makefile.am  andgate.h  carryrippleadder.h  fulladder.cpp  fulladder.h  halfadder.cpp  halfadder.h  number.h  orgate.h  subtractor.h  xorgate.h
tests/: Makefile.am  addertest.cpp  addertest.h  arithtest.cpp  arithtest.h  gatetest.cpp  gatetest.h  unlogical.cpp
